# CMakeList.txt : CMake project for BaseDerived_test, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("BaseDerived_test")

# Add source to this project's executable.
add_executable (BaseDerived_test "BaseDerived_test.cpp" "BaseDerived_test.h" "rows.hpp")

# TODO: Add tests and install targets if needed.
