# CMakeList.txt : CMake project for CH8_redef_base_class, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("CH8_redef_base_class")

# Add source to this project's executable.
add_executable (CH8_redef_base_class "CH8_redef_base_class.cpp" )

# TODO: Add tests and install targets if needed.
